--- a/APIKey/Resources/layout/activity_main.xml
+++ b/APIKey/Resources/layout/activity_main.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView 
-        android:layout_width="wrap_content"
+
+	<EditText
+        android:id="@+id/ipInput"
+        android:hint="Enter IP address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+	<Button
+        android:id="@+id/checkButton"
+        android:text="Check IP"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/app_text"
-    />
-</RelativeLayout>
+        android:layout_marginTop="12dp" />
+
+	<TextView
+        android:id="@+id/resultText"
+        android:text="Result will appear here"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp" />
+</LinearLayout>
